solved the overflow and font size

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,7 @@ button{
     padding: 2%;
   }
 }
+
+body{
+  overflow-x: hidden;
+}
